pdf twig still trying...

--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -35,15 +35,11 @@
 	}
 
 	.sign-info table {
-    border-top: 0.03em dashed silver;
-    border-left: 0.03em dashed silver;
-    border-right: 0; border-bottom: 0;
+
 	}
 
 	.sign-info table td{
-    border-top:0; border-left: 0;
-    border-right: 0.03em dashed silver;
-    border-bottom: 0.03em dashed silver;
+
     padding:.75em 1.5em;
     text-align: justify;
 	}
@@ -62,8 +58,8 @@
 <div id="logos">					
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
     <tbody><tr>
-                <td width="50%" valign="bottom" align="left" border="0"><img src="{{asset('bundles/insurancecontent/images/our_logo.jpg')}}" width="219" height="40" border="0" /></td>
-                <td width="50%" valign="bottom" align="right" border="0"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.jpg')}}" width="219" height="84" border="0" /></td>
+                <td width="50%" height="84" valign="bottom" align="left" border="0"><img src="{{asset('bundles/insurancecontent/images/our_logo.jpg')}}" width="219" height="40" border="0" /></td>
+                <td width="50%" height="84" valign="bottom" align="right" border="0"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.jpg')}}" width="219" height="84" border="0" /></td>
                    </tr>
 </tbody></table>	
 </div>                
