--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -35,11 +35,15 @@
 	}
 
 	.sign-info table {
-
+    border-top: 1px dashed silver;
+    border-left: 1px dashed silver;
+    border-right: 0; border-bottom: 0;
 	}
 
 	.sign-info table td{
-
+    border-top:0; border-left: 0;
+    border-right: 1px dashed silver;
+    border-bottom: 1px dashed silver;
     padding:.75em 1.5em;
     text-align: justify;
 	}
@@ -58,8 +62,8 @@
 <div id="logos">					
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
     <tbody><tr>
-                <td width="50%" height="84" valign="bottom" align="left" border="0"><img src="{{asset('bundles/insurancecontent/images/our_logo.jpg')}}" width="219" height="40" border="0" /></td>
-                <td width="50%" height="84" valign="bottom" align="right" border="0"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.jpg')}}" width="219" height="84" border="0" /></td>
+                <td width="50%" height="90" valign="bottom" align="left" border="0"><img src="{{asset('bundles/insurancecontent/images/our_logo.jpg')}}" border="0" align="bottom" /></td>
+                <td width="50%" height="90" valign="bottom" align="right" border="0"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.jpg')}}" border="0" align="bottom" /></td>
                    </tr>
 </tbody></table>	
 </div>                
@@ -78,7 +82,7 @@
 </h2>
 <br>
 
-<table width="100%" cellspacing="0" cellpadding="5" border="1">
+<table width="100%" cellspacing="0" cellpadding="5" border="0">
     <tbody><tr>
         <td width="40%" valign="top" rowspan="2">
             <strong>1. Страховик</strong><br><font size="-1">(назва, адреса, № телефону)</font><br>
@@ -111,7 +115,7 @@
 
 
 <p><strong>4. Страхова сума (ліміт відповідальності) на одного потерпілого</strong>, грн.</p>
-<table width="100%" cellspacing="0" cellpadding="5" border="1">
+<table width="100%" cellspacing="0" cellpadding="5" border="0">
     <tbody>
       <tr>
         <td width="50%"><em>За шкоду, заподіяну життю і здоров'ю (на одного потерпілого)</em></td>
@@ -126,25 +130,21 @@
         </td>
     </tr>
 </tbody></table>
-<p></p>
+<br>
 <table width="100%" cellspacing="0" cellpadding="5" border="0">
     <tbody>
     <tr>
-        <td width="50%" border="0"><strong>Розмір франшизи</strong>, грн.</td>
-        <td width="50%">
-                        	{{order.company.franchise}} гривень
-                    </td>
+        <td width="50%"><strong>Розмір франшизи</strong>, грн.</td>
+        <td width="50%">{{order.company.franchise}} гривень</td>
     </tr>
 </tbody></table>
-
-<br>
 
 <p><strong>5. Страхувальник</strong> <em>(П.І.Б./назва організації)</em></p>
 
 <table width="100%">
 	<tbody><tr>
 		<td width="35%" valign="top">
-            <table width="100%" cellpadding="3" border="1">
+            <table width="100%" cellpadding="3" border="0">
                 <tbody><tr>
                     <td>
                         <strong>{{ order.surname }}</strong>
@@ -163,7 +163,7 @@
             </tbody></table>
         </td>
         <td width="60%" valign="top">
-            <table width="100%" cellpadding="3" border="1">
+            <table width="100%" cellpadding="3" border="0">
                 <tbody><tr>
                     <td><strong>Адреса</strong></td>
                 </tr>
@@ -171,10 +171,10 @@
                 	<td colspan="3">м. {{order.registerCity}}, {{ order.registerAddress }}, {{order.registerBuilding}}</td>
                 </tr>
             </tbody></table>
-            <table width="100%" cellpadding="3" border="1">
+            <table width="100%" cellpadding="3" border="0">
                 <tbody><tr>
                     <td>
-                    	Телефон
+                    	<strong>Телефон</strong>
                     </td>
                     <td>{{ order.phone }}</td>
                 </tr>
@@ -182,8 +182,6 @@
         </td>
     </tr>
 </tbody></table>
-
-<br>
 
 <p><strong>Виключно для страхувальника - фізичної особи</strong></p>
 <p>
@@ -200,12 +198,10 @@
 	ким виданий документ <strong>{{ order.documentAuthority }}</strong>
 </p>
 
-<br>
-
 <p><strong>6. Забезпечений транспортний засіб (ТЗ)</strong></p>
-<table width="100%" cellspacing="0" cellpadding="5">
+      <table width="100%" cellspacing="0" cellpadding="5" style="border:0">
     <tbody><tr>
-        <td>
+        <td style="border:0">
             Тип
             <strong>{% if order.displacement == '1.4' %}B1{%- elseif order.displacement == '1.7' -%}B2{%- elseif order.displacement == '2.1' -%}B3{%- elseif order.displacement == '3.1' -%}B4{% endif %}</strong>
             &nbsp;
@@ -226,8 +222,6 @@
         </td>
     </tr>
 </tbody></table>
-
-<br>
 
 <p><strong>7. Страховий платіж</strong> <strong>{{order.price|number_format(2, ',', ' ')}} грн.</strong><br>
 {% if order.payDate in not null %}Сплачений <strong>{{order.payDate|date('D, d F Y H г i хв s с', 'Europe/Kiev')}}</strong></p>{% endif %}
