fix main page h1 chrome

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
@@ -19,7 +19,7 @@
 					</div>
 					<div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Сколько для меня будет стоить полис ОСАГО и какую скидку я смогу получить?</a></h2>
-                    <p>Стоимость полиса ОСАГО расчитывается по формуле, в зависимости от объема двигателя и места регистрации Вашего автомобиля. Более подробную информацию по ценообразованию Вы можете получить на сайте <a href="http://www.mtsbu.kiev.ua/ua/for_consumers/96536/96546/" target="_blank">МТСБУ</a>. Ваша скидка рассчитывается от возраста вашего автомобиля: новый автомобиль - 3%, 2012 года - 5%, 2011 года - 10%, 2010 года - 15%, 2009 года - 20%, 2008 года и старше - 25%.</p>
+                    <p>Стоимость полиса ОСАГО расчитывается по формуле, в зависимости от объема двигателя и места регистрации Вашего автомобиля. Более подробную информацию по ценообразованию Вы можете получить на сайте <a href="http://www.mtsbu.kiev.ua/ua/for_consumers/96536/96546/" target="_blank">МТСБУ</a>. Ваша скидка рассчитывается от возраста Вашего автомобиля: новый автомобиль - 3%, 2012 года - 5%, 2011 года - 10%, 2010 года - 15%, 2009 года - 20%, 2008 года и старше - 25%.</p>
 					</div>
                     <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Какими способами я могу оплатить свой заказ?</a></h2>
