--- a/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
@@ -134,6 +134,13 @@ footer {
     padding-top:40px;
 }
 
+h1,h2,h3,h4,h5,h6 {
+	font-size:100%;
+	font-weight:normal;
+	letter-spacing: normal;
+	line-height: normal;
+}
+
 h1{
   font-family:"robotoBlack", Arial Black, Helvetica, sans-serif;  
   font-size:22px;
