--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -473,11 +473,10 @@ footer {
   background-repeat: no-repeat;
   width: 1000px;
   height: 352px;
-  position: relative;
   margin-bottom: 25px;
   z-index: 2; }
 .calculator_box span.first_part_slogon { 
-      font-family: "robotoBlack", Helvetica, sans-serif;
+      font-family: 'robotoBlack', Helvetica, sans-serif;
 	  font-size: 20px;
 	  color: #fefefe;
 	  text-transform: uppercase;
@@ -488,27 +487,24 @@ footer {
 	  letter-spacing: 1px;
 } 
 .calculator_box h1 {
-	  margin-top: 0px;
-	  letter-spacing: 0px;
 	  font-size: 44px;
 	  color: #fefefe;
 	  text-transform: uppercase;
-	  line-height: 20px;
+	  line-height: 0.7;
 	  position: relative;
 	  top: 40px;
 	  right: -20px;
-	  font-family: "robotoBlack", Helvetica, sans-serif;
+	  font-family: 'robotoBlack', Helvetica, sans-serif;
 	  text-shadow: 1px 1px 1px rgba(61, 97, 9, 0.7);
 }
 .calculator_box h1 span.second {
-	  letter-spacing: 0px;
 	  font-size: 32px;
 	  color: #fefefe;
-	  font-family: "robotoBlack", Helvetica, sans-serif;
+	  font-family: 'robotoBlack', Helvetica, sans-serif;
 }
 
-.calculator_box h2.fivemin {
-	font-family: "robotoregular", Helvetica, sans-serif;
+/*.calculator_box h2.fivemin {
+	font-family: 'robotoregular', Helvetica, sans-serif;
 	color: #fefefe;
 	position: relative;
 	top:45px;
@@ -517,23 +513,22 @@ footer {
 	letter-spacing: 0.01em;
 	font-weight: 700;
 	text-shadow: 1px 1px 1px rgba(61, 97, 9, 0.5);
-	line-height: 22px;
+	line-height: 0.95;
 	font-style: normal;
 }
 
 .calculator_box h2.fivemin span {
-	font-family: "robotoregular", Helvetica, sans-serif;
+	font-family: 'robotoregular', Helvetica, sans-serif;
 	color: #fefefe;
-	font-size: 26px;
+	font-size: 25px;
 	text-transform: uppercase;
-	letter-spacing: 0px;
-}
+}*/
 
  
   .calculator_box .count_down_container {
     height: 80px;
     position: relative;
-    top: 50px;
+    top: 115px;
     left: 20px; }
   .calculator_box .count_down_container .discount_phrase {
 	font-size: 18px;
@@ -557,7 +552,7 @@ footer {
       margin-right: 25px;
       width: 73px;
       height: 47px;
-      line-height: 47px;
+      line-height: 45px;
       background-image: url(../images/sprite.png);
       background-position: -318px -67px;
       background-repeat: no-repeat;
@@ -566,7 +561,7 @@ footer {
       font-size: 32px;
       color: white;
       font-weight: 900;
-      letter-spacing: 18px;
+      letter-spacing: 17px;
       padding-left: 7px;
       position: relative;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.95); }
@@ -594,7 +589,8 @@ footer {
         text-shadow: none;
         line-height: 17px;
         font-size: 17px;
-        color: #4d4d4d; }
+        color: #4d4d4d; 
+		text-shadow: 0px -1px 0px #fff;}
   .calculator_box .calculator {
     height: 290px;
     width: 380px;
