--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -2,18 +2,6 @@
 <html>
  <head>
    <style>
-	#logos table {
-    border:0
-	}
-
-	#logos table td {
-    border:0;
-	}
-	
-	#logos table td img {
-	border: 0px none;
-	padding: 0;
-	}
 	
 .sign-info {
 	margin: 0;
@@ -35,15 +23,10 @@
 	}
 
 	.sign-info table {
-    border-top: 1px dashed silver;
-    border-left: 1px dashed silver;
-    border-right: 0; border-bottom: 0;
+
 	}
 
 	.sign-info table td{
-    border-top:0; border-left: 0;
-    border-right: 1px dashed silver;
-    border-bottom: 1px dashed silver;
     padding:.75em 1.5em;
     text-align: justify;
 	}
@@ -82,7 +65,7 @@
 </h2>
 <br>
 
-<table width="100%" cellspacing="0" cellpadding="5" border="0">
+<table width="100%" cellspacing="0" cellpadding="0" border="1">
     <tbody><tr>
         <td width="40%" valign="top" rowspan="2">
             <strong>1. Страховик</strong><br><font size="-1">(назва, адреса, № телефону)</font><br>
@@ -115,7 +98,7 @@
 
 
 <p><strong>4. Страхова сума (ліміт відповідальності) на одного потерпілого</strong>, грн.</p>
-<table width="100%" cellspacing="0" cellpadding="5" border="0">
+<table width="100%" cellspacing="0" cellpadding="0" border="1">
     <tbody>
       <tr>
         <td width="50%"><em>За шкоду, заподіяну життю і здоров'ю (на одного потерпілого)</em></td>
@@ -131,7 +114,7 @@
     </tr>
 </tbody></table>
 <br>
-<table width="100%" cellspacing="0" cellpadding="5" border="0">
+<table width="100%" cellspacing="0" cellpadding="0" border="1">
     <tbody>
     <tr>
         <td width="50%"><strong>Розмір франшизи</strong>, грн.</td>
@@ -141,10 +124,10 @@
 
 <p><strong>5. Страхувальник</strong> <em>(П.І.Б./назва організації)</em></p>
 
-<table width="100%">
+<table width="100%" cellspacing="0" border="1">
 	<tbody><tr>
 		<td width="35%" valign="top">
-            <table width="100%" cellpadding="3" border="0">
+            <table width="100%" cellpadding="0">
                 <tbody><tr>
                     <td>
                         <strong>{{ order.surname }}</strong>
@@ -163,7 +146,7 @@
             </tbody></table>
         </td>
         <td width="60%" valign="top">
-            <table width="100%" cellpadding="3" border="0">
+            <table width="100%" cellpadding="0" border="0">
                 <tbody><tr>
                     <td><strong>Адреса</strong></td>
                 </tr>
@@ -171,7 +154,7 @@
                 	<td colspan="3">м. {{order.registerCity}}, {{ order.registerAddress }}, {{order.registerBuilding}}</td>
                 </tr>
             </tbody></table>
-            <table width="100%" cellpadding="3" border="0">
+            <table width="100%" cellpadding="0" border="0">
                 <tbody><tr>
                     <td>
                     	<strong>Телефон</strong>
@@ -199,9 +182,7 @@
 </p>
 
 <p><strong>6. Забезпечений транспортний засіб (ТЗ)</strong></p>
-      <table width="100%" cellspacing="0" cellpadding="5" style="border:0">
-    <tbody><tr>
-        <td style="border:0">
+<p>
             Тип
             <strong>{% if order.displacement == '1.4' %}B1{%- elseif order.displacement == '1.7' -%}B2{%- elseif order.displacement == '2.1' -%}B3{%- elseif order.displacement == '3.1' -%}B4{% endif %}</strong>
             &nbsp;
@@ -219,9 +200,7 @@
             &nbsp;
             Місце реєстрації
             <strong>{{ order.registerCity.region.value }}, {{ order.registerCity }}</strong>
-        </td>
-    </tr>
-</tbody></table>
+</p>
 
 <p><strong>7. Страховий платіж</strong> <strong>{{order.price|number_format(2, ',', ' ')}} грн.</strong><br>
 {% if order.payDate in not null %}Сплачений <strong>{{order.payDate|date('D, d F Y H г i хв s с', 'Europe/Kiev')}}</strong></p>{% endif %}
