--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -197,12 +197,12 @@ jQuery(function(){
                     <h2>Наш страховой партнер</h2>
                     <div class="text_box">
                         <img src="{{asset('bundles/insurancecontent/images/partner_logo.png')}}" alt="img" class="logo" />
-                        <p class="short_text">Страховая компания «БРОКБИЗНЕС» работает на рынке страхования с 1993 года и за время работы приобрела большой опыт, заняв устойчивые позиции среди наиболее динамичных компаний на рынке страхования. Сегодня Страховая компания «БРОКБИЗНЕС» входит в ведущие страховые компании Украины, имеет членство и входит в Президиум Моторного </p>
-                        <p class="drop_text">(транспортного) страхового бюро Украины, является членом Ядерного Страхового Пула Украины и Федерации Страховых Посредников Украины, входит в Совет Строительного Страхового Пула. В 2009 году в результате реструктуризации Лиги страховых организаций Украины, вышла из Правления и вошла в состав Координационного Совета Лиги, членами которого являются крупнейшие страховые компании Украины. </p>
+                        <p class="short_text">Страховая компания «БРОКБИЗНЕС» накапливает свой опыт на рынке страхования с 1993 года, успев занять устойчивые позиции среди наиболее динамичных компаний Украины. На сегодняшний день Страховая компания «БРОКБИЗНЕС» входит в число ведущих страховых компаний Украины, имеет членство в Моторном (транспортном) страховом бюро Украины, является членом Ядерного Страхового Пула Украины и Федерации Страховых Посредников Украины, входит в Совет Строительного Страхового Пула.</p>
+                        <p class="drop_text">Компания всегда готова к взаимодействию, демонстрируя индивидуальный подход к каждому клиенту, имеет активные деловые связи и высокопрофессиональный коллектив, который способен понять потребности клиента и наилучшим образом учесть его интересы. В компании не собираются останавливаться на достигнутом, а планируют и дальше развиваться, предоставляя клиентам лучшее качество сервиса.</p>
                         <div class="dotted_box hide">
                             <span class="arrow"></span>
-                            <span class="text show">Показать информацию</span>
-                            <span class="text hide">Скрыть информацию</span>
+                            <span class="text show">Больше информации</span>
+                            <span class="text hide">Свернуть</span>
                         </div>
                     </div>
                 </div>
