--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -1175,3 +1175,7 @@ margin-left:10px;
 .payment-form {
     display: none;
 }
+
+/*------------------------------------------------------------------------------------------- */
+/*-------------------------------------- PARTNER PAGE --------------------------------- */
+/*------------------------------------------------------------------------------------------- */  
