--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -291,7 +291,7 @@
                     }
                     if (data.message == 'submit') {
                         $('.payment-form').html(data.form);
-                        $('.payment-form form').trigger('submit');
+                        //$('.payment-form form').trigger('submit');
                     }
                     if (data.message == 'error') {
                         console.log(data.error);
