--- a/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
@@ -1,3 +1,4 @@
+{%block title %}О проекте{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
  <section class="content">  
@@ -6,7 +7,7 @@
                         <h1>О проекте</h1>
                         <h3>"ПолисМаркет" - это Ваш виртуальный страховой агент.</h3>
                     </div>                    
-                    <p></p>
+                    <p>Скоро мы расскажем все о себе!</p>
         </div>
 			 <div class="footer-push"></div>
     </section>
