--- a/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Идет перенаправление на платежную систему{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
     <section class="content">
