--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Шаг 3 - Доставка и оплата - Завершение заказа{% endblock %}
 {# empty Twig template #}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 
