--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -1149,6 +1149,7 @@ margin-left:10px;
 	font-family: Arial;
 	font-weight: normal;
 	padding-top: 4px;
+	padding-bottom: 0;
 }
 
 .text_content .contact_left span.ico {
