--- a/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Контакты - PolisMarket{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
  <section class="content">  
