--- a/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Ответы на ваши вопросы - PolisMarket{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
  <section class="content">  
