--- a/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Ваш заказ принят{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
  <section class="content">  
