--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Страхование Онлайн - Полис ОСАГО за 5 минут{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block head_scripts%}
 <script>
