--- a/path/src/Insurance/ContentBundle/Resources/views/Default/partner.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/partner.html.twig
@@ -1,3 +1,4 @@
+{%block title %}О нашем страховом партнере - PolisMarket{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
  <section class="content">  
