--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Калькулятор ОСАГО - Рассчитать стоимость онлайн{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {# calculator #}
 {%block head_scripts %}
