--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -1,3 +1,4 @@
+{%block title %}Шаг 2 - Заполнение персональных данных{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
 <section class="content">
