--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -84,10 +84,12 @@ $(function() {
                     <div class="calculator_content">
 
                         <aside class="">
-                            <div class="sidebar_title">Стоимость полиса:</div>
+                            <div class="sidebar_title">Стоимость полиса</div>
                             <div class="before_calc show">
+							<span>Наш страховой партнер:</span><br/>
+							<img src="{{asset('bundles/insurancecontent/images/partner_logo.png')}}" alt="img" class="logo" /><br/>
 							Здесь будет Ваш расчет.
-							<br/>
+							<br/><br/>
 							Пожалуйста, начните заполнять калькулятор.
 							</div>
 							<div class="calc prices-container">
