--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -176,7 +176,7 @@ header {
     width: 100%;
     z-index: 10;
     background-image: url(../images/bg.png);
-    background-position: 0px -54px;
+    background-position: 0px -55px;
     background-repeat: repeat-x;
     background-color: transparent;
     border-radius: 5px;
@@ -1896,7 +1896,8 @@ form.modal_form {
   .grey_area .title {
     padding-bottom: 20px;
     margin-bottom: 20px;
-    border-bottom: 1px solid #cbcbcb; }
+    border-bottom: 1px solid #E3E3E3;
+	box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 1.0);}
 
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- POLIS DATE --------------------------------------- */
