--- a/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
@@ -1,4 +1,4 @@
-{%block title %}Ваш заказ принят{% endblock %}
+{%block title %}Р’Р°С€ Р·Р°РєР°Р· РїСЂРёРЅСЏС‚{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
  <section class="content">  
