payment success style

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
@@ -2,7 +2,7 @@
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
     <section class="content">
-        <div class="limit text_content">
+        <div class="limit text_content center">
             Сейчас Вы будете перенаправлены на страницу системы оплаты, если переход не происходит автоматически, нажмите на кнопку ниже
             {{ paymentForm|raw }}
         </div>
