--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -1197,7 +1197,7 @@ margin-left:10px;
 .payment-form {
     /*display: none;*/
 }
+.center {
+	text-align: center;
+}
 
-/*------------------------------------------------------------------------------------------- */
-/*-------------------------------------- PARTNER PAGE --------------------------------- */
-/*------------------------------------------------------------------------------------------- */  
