--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -458,17 +458,20 @@ footer {
       float: left;
       line-height: 15px; }
     footer .bottom_part .counter_container {
-      width: 200px;
-      height: 31px;
+      width: 350px;
       margin-right: 60px;
-      display: inline-block;
+	  margin-top: 15px;
+      display: block;
       float: right; 
-	  line-height: 31px;
-	  font-size: 14px;
 	  text-align: right;
-	}
+	  display: inline;
+	  font-size: 11px;	
+	 }
+	
 	footer .bottom_part .counter_container a {
-	text-decoration: underline;}
+	text-decoration: underline;
+	font-size: 11px;
+}
 	
     footer .bottom_part .counter_container a:hover {
         color: #ffa600;
@@ -2986,7 +2989,7 @@ form.personal_data {
   .recomend_box .recomend_title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    color: black;
+    color: #5F5F5F;
     font-weight: bold;
     padding-top: 25px;
     margin: 0 15px 15px;
