--- a/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
@@ -32,7 +32,7 @@
             <label>Комментарий:</label>
             {{form_widget(callback_form.question)}}
         </div>
-        <div type="submit" class="green_button">Заказать звонок</div>
+        <div type="submit" class="green_button">Жду звонка</div>
 		<div class="modal_preloader">
         <img src="{{asset('bundles/insurancecontent/images/3.gif')}}" alt="img" />
         </div>
