--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -111,7 +111,7 @@
                                 <div class="shadow"></div>
                             </li>
                             <li><a href="{{path('partner')}}">О нашем страховом партнере<span class="delimiter"></span></a></li>
-							<li><a href="{{path('faq')}}">Ответы на Ваши вопросы<span class="delimiter"></span></a></li>
+							<li><a href="{{path('faq')}}">Центр помощи<span class="delimiter"></span></a></li>
 							<li><a href="{{path('contacts')}}">Контакты<span class="delimiter"></span></a></li>
 							</ul>
                     </li>
@@ -157,7 +157,7 @@
             <div class="limit">
                 <a href="" class="footer_logo"></a>
                 <div class="copyright">© 2013 ПолисМаркет<br />Все права защищены законом</div>
-                <div class="counter_container"><a href="#">Пользовательское соглашение</a></div>
+                <div class="counter_container"><a href="{{path('agreement')}}">Пользовательское соглашение</a> | <a href="{{path('agreement')}}">Политика конфиденциальности</a></div>
                 <div style="clear: both;"></div>
             </div>
          </div>
@@ -371,5 +371,24 @@
         //Register button init
 
     </script>
+	<script type="text/javascript">
+    var reformalOptions = {
+        project_id: 247771,
+        project_host: "polismarket.reformal.ru",
+        tab_orientation: "right",
+        tab_indent: "50%",
+        tab_bg_color: "#72b838",
+        tab_border_color: "#FFFFFF",
+        tab_image_url: "http://tab.reformal.ru/0J7RgdGC0LDQstGM0YLQtSDQvtGC0LfRi9CyINC%252BINC90LDRgQ==/FFFFFF/3dd7e7d2afb0e0856543e64e17196e68/right/1/tab.png",
+        tab_border_width: 1
+    };
+    
+    (function() {
+        var script = document.createElement('script');
+        script.type = 'text/javascript'; script.async = true;
+        script.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'media.reformal.ru/widgets/v3/reformal.js';
+        document.getElementsByTagName('head')[0].appendChild(script);
+    })();
+</script><noscript><a href="http://reformal.ru"><img src="http://media.reformal.ru/reformal.png" /></a><a href="http://polismarket.reformal.ru">Оставьте отзыв о нас</a></noscript>
 </body>
 </html>
