--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/main.js')}}"></script>
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/jquery.ui.datepicker-ru.js')}}"></script>
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/jquery-ui-1.10.3.custom.min.js')}}"></script>
+<meta name="verify-reformal" content="3140a432275f87180a9bfff9" />
 {%block head_scripts%}
 {% endblock %}
 <script type="text/javascript">
@@ -371,15 +372,15 @@
         //Register button init
 
     </script>
-	<script type="text/javascript">
+<script type="text/javascript">
     var reformalOptions = {
         project_id: 247771,
         project_host: "polismarket.reformal.ru",
-        tab_orientation: "right",
+        tab_orientation: "left",
         tab_indent: "50%",
         tab_bg_color: "#72b838",
         tab_border_color: "#FFFFFF",
-        tab_image_url: "http://tab.reformal.ru/0J7RgdGC0LDQstGM0YLQtSDQvtGC0LfRi9CyINC%252BINC90LDRgQ==/FFFFFF/3dd7e7d2afb0e0856543e64e17196e68/right/1/tab.png",
+        tab_image_url: "http://tab.reformal.ru/0J7RgdGC0LDQstGM0YLQtSDQvtGC0LfRi9CyINC%252BINC90LDRgQ==/FFFFFF/2d8c7f1cbb8f8b5e95b76f07bb92f791/left/1/tab.png",
         tab_border_width: 1
     };
     
