--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -158,7 +158,7 @@
             <div class="limit">
                 <a href="" class="footer_logo"></a>
                 <div class="copyright">© 2013 ПолисМаркет<br />Все права защищены законом</div>
-                <div class="counter_container"><a href="{{path('agreement')}}">Пользовательское соглашение</a> | <a href="{{path('agreement')}}">Политика конфиденциальности</a></div>
+                <div class="counter_container"><a href="{{path('privacypolicy')}}">Политика конфиденциальности</a>
                 <div style="clear: both;"></div>
             </div>
          </div>
