--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -134,7 +134,7 @@
             <div class="column second">
                 <div class="title">Меню</div>
                 <a href="{{path('step1')}}"><span></span>Калькулятор ОСАГО</a>
-                <a href=""><span></span>Как оформить полис?</a>
+                <a href="{{path('faq')}}"><span></span>Центр помощи</a>
                 <a href="{{path('osago-info')}}"><span></span>Все об ОСАГО</a>
 				<a href="{{path('event-info')}}"><span></span>Страховой случай</a>
             </div>
@@ -158,7 +158,7 @@
             <div class="limit">
                 <a href="" class="footer_logo"></a>
                 <div class="copyright">© 2013 ПолисМаркет<br />Все права защищены законом</div>
-                <div class="counter_container"><a href="{{path('privacypolicy')}}">Политика конфиденциальности</a>
+                <div class="counter_container"><!-- <a href="{{path('privacypolicy')}}">Политика конфиденциальности</a> --></div>
                 <div style="clear: both;"></div>
             </div>
          </div>
