--- a/path/src/Insurance/ContentBundle/Resources/views/Form/feedback_form.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Form/feedback_form.html.twig
@@ -23,7 +23,7 @@
             <div class="error ico"></div>
             <div class="error_text">Нужно заполнить</div>
         </div>
-        <div class="green_button">Отправить вопрос</div>
+        <div class="green_button">Отправить</div>
 		<div class="modal_preloader">
         <img src="{{asset('bundles/insurancecontent/images/3.gif')}}" alt="img" />
         </div>
