--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/main.js')}}"></script>
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/jquery.ui.datepicker-ru.js')}}"></script>
 <script type="text/javascript" src="{{asset('bundles/insurancecontent/js/jquery-ui-1.10.3.custom.min.js')}}"></script>
-<meta name="verify-reformal" content="3140a432275f87180a9bfff9" />
+<meta name="google-site-verification" content="KphLHCVcFBVTUhTs5v4hW7DBjJ02g2b9Se5Xu2yZ2PI" />
 {%block head_scripts%}
 {% endblock %}
 <script type="text/javascript">
@@ -57,6 +57,16 @@
             $.modal().close();
         });
 	});
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46321035-1', 'polismarket.com.ua');
+  ga('send', 'pageview');
+
 </script>
 </head>
 
