--- a/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
@@ -10,3 +10,4 @@
 </section>
     </section>
 {% endblock %}
+<script type="text/javascript" src="//rdr.salesdoubler.com.ua/in/pixel/245/tracking.js?trans_id={{order.id}}"></script>
