--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,7 @@
 {%block title %}Страхование Онлайн - Полис ОСАГО за 5 минут{% endblock %}
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block head_scripts%}
+<meta name="Description" content="Страхование Online. Рассчитать стоимость ОСАГО (Обязательное страхование гражданской ответственности владельцев транспортных средств). Здесь Вы можете оформить полис ОСАГО online за 5 минут.">
 <script>
 var end_time = '{{timerEnd}}';
 </script>
