--- a/path/src/Insurance/ContentBundle/Resources/views/Default/event-info.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/event-info.html.twig
@@ -11,8 +11,8 @@
 					<ul class="list_event">
 					<li><span class="number">1</span><span class="list_text">В первую очередь Вам нужно проинформировать ГАИ о случившемся ДТП. Для этого наберите «02» («102» с мобильного), и сообщите диспетчеру всю нужную информацию, касающуюся места происшествия и его участников.</span></li>
 					<li><span class="number">2</span><span class="list_text">Обменяться с участником(ками) ДТП данными о себе, месте своего проживания, а также предоставить друг-другу информацию о своих страховых полисах.</span></li>
-<li><span class="number">3</span><span class="list_text">Обязательно нужно принять все возможные меры, дабы не увеличить объем предполагаемого ущерба от ДТП.</span></li>
-<li><span class="number">4</span><span class="list_text">Дальше в течении 3-х дней (не позднее) требуется обратиться в страховую компанию виновника ДТП и письменно известить ее случившемся ДТП.</span></li>
+<li><span class="number">3</span><span class="list_text">Необходимо принять все возможные меры, дабы не увеличить объем предполагаемого ущерба от ДТП.</span></li>
+<li><span class="number">4</span><span class="list_text">Дальше в течении 3-х дней (не позднее) требуется обратиться в страховую компанию виновника ДТП и письменно известить ее о случившемся ДТП.</span></li>
 <li><span class="number">5</span><span class="list_text">В течении 10 дней после этого к Вам должен прибыть страховой эксперт для оценки ущерба. Также в этот период Вы не имеете права ремонтировать или еще как-то влиять на повреждения Вашего ТС.</span></li>
 </ul>
 <p>Если же Вы оказались предполагаемым виновником ДТП, рекоммендуем известить об этом свою страховую компанию и дождаться окончательного решения суда.</p>
